# rust_opentelemetry_with_optl_example

./: Cargo.toml  collector.sh  otel-collector-config.yaml
src/: main.rs
